# screamy-ball

./: .clang-format  .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  PROPOSAL.md  README.md
apps/: CMakeLists.txt  my_app.cc  my_app.h  run.cc  screamy_ball.cc  screamy_ball.h
assets/: 6247.dic  6247.lm  demo.jsgf  help.txt  key.txt  screamy_ball.db
cmake/: FindSQLite3.cmake  configure_files.cmake  make_cinder_library.cmake
docs/: CMakeLists.txt  README.md
include/mylibrary/: example.h
include/screamy-ball/: ball.h  direction.h  engine.h  leaderboard.h  location.h  obstacle.h  player.h
src/: CMakeLists.txt  direction.cc  engine.cc  example.cc  leaderboard.cc  location.cc  obstacle.cc
tests/: CMakeLists.txt  engine_test.cc  test.cc
